# utilcpp-math

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  filefilter.txt
example/: CMakeLists.txt  utilc-math-example.c  utilc-math-example.cpp  utilc-template-example.c  utilcpp-math-example.cpp
include/: constants.h  mat4x4.h  min_max.h  ucm_vec3.h  ucm_vec4.h  utilc-math.h  utilc-template.h  utilcpp-math.h  vec3.h  vec4.h
include/utilcpp-math/: constants.h  mat4x4.h  min_max.h  vec4.h
src/: CMakeLists.txt  mat4x4.cpp  min_max.cpp  ucm_vec3.cpp  ucm_vec4.cpp  utilc-math.c  utilc-math.cpp  utilc-template.c  vec3.cpp  vec4.cpp
tests/: CMakeLists.txt  mat4x4.cpp  mat4x4.hpp  test-utilc-math  test-utilc-math.cpp  test-utilc-template.c  test-utilcpp-math.cpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
