enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} utilc-math)
include_directories(. ../include)
add_executable(test-utilc-math test-utilc-math.cpp)
target_link_libraries(test-utilc-math ${LIBS})
add_test(test-utilc-math ${CMAKE_CURRENT_BINARY_DIR}/test-utilc-math)
